fixed overlapping bugg

--- a/src/home2.css
+++ b/src/home2.css
@@ -46,7 +46,7 @@
     max-height:75svh;
     /* width: 100%; */
   /* background-color: #111; */
-  display: grid;
+  display: block;
     flex-direction: row;
     grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
     grid-template-rows: auto;
@@ -56,6 +56,7 @@
   #imageSectionContainer{
     flex-direction: column-reverse !important;
     min-width: 90vw;
+    max-height:100%;
   }
 }
   #imageSectionContainer>div {
@@ -72,6 +73,9 @@
     #imageSectionContainer img{
       min-width: 100% !important;
       max-width: 100% !important;
+      object-fit: cover;
+      object-position: center;
+      position: relative;
     }
   }
   #imageSectionContainer>div:nth-child(even) {
@@ -81,6 +85,7 @@
     #imageSectionContainer>div>img {
       aspect-ratio: fixed;
         max-height: 50vw;
+        height: auto;
         /* git min-width: 50vw; */
       filter: drop-shadow(var(--textColor2) 0 1rem 0);
       padding-bottom: 4px;
